--- a/dokument-diplomska-naloga.tex
+++ b/dokument-diplomska-naloga.tex
@@ -14,53 +14,49 @@
 \naslov{Paralelizacija grafovskih algoritmov v funkcijskih programskih jezikih}
 
 % - naslov dela v angleščini
-\title{Parallelisation of graph algorithms in functional programming languages}
+\title{Parallelisation of Graph Algorithms in Functional Programming Languages}
 
 % - ime mentorja/mentorice s polnim nazivom:
-%   - doc.~dr.~Ime Priimek
-%   - izr.~prof.~dr.~Ime Priimek
-%   - prof.~dr.~Ime Priimek
-%   za druge variante uporabite ustrezne ukaze
-\mentorica{izr.~prof.~dr.~Ime Priimek}  % TODO: Spremeni v *mentor*
+\mentorica{izr.~prof.~dr.~Matija Pretnar}
 
 % - leto diplome
 \letnica{2023} 
 
-% TODO
+
+
 % - povzetek v slovenščini
 %   V povzetku na kratko opišite vsebinske rezultate dela. Sem ne sodi razlaga
 %   organizacije dela, torej v katerem razdelku je kaj, pač pa le opis vsebine.
-\povzetek{V povzetku na kratko opišemo vsebinske rezultate dela. Sem ne sodi
-razlaga organizacije dela -- v katerem poglavju/razdelku je kaj, pač pa le opis
-vsebine.}
+\povzetek{TODO}
 
-% TODO
 % - povzetek v angleščini
-\abstract{Prevod slovenskega povzetka v angleščino.}
+\abstract{TODO}
 
 % - klasifikacijske oznake, ločene z vejicami
 %   Oznake, ki opisujejo področje dela, so dostopne na strani https://www.ams.org/msc/
-\klasifikacija{68R10, 68W10, 68N18, 68Q85}
+\klasifikacija{68R10, 68W10, 68N18, 68N19, 05C85}
 
 % - ključne besede, ki nastopajo v delu, ločene s \sep
-\kljucnebesede{naravni logaritem\sep nenaravni algoritem}
+\kljucnebesede{TODO}
 
 % - angleški prevod ključnih besed
-\keywords{natural logarithm\sep unnatural algorithm} % angleški prevod ključnih besed
+\keywords{TODO} % angleški prevod ključnih besed
 
+
+% TODO
 % - angleško-slovenski slovar strokovnih izrazov
 \slovar{
-\geslo{continuous}{zvezen}
-\geslo{uniformly continuous}{enakomerno zvezen}
-\geslo{compact}{kompakten -- metrični prostor je kompakten, če ima v njem vsako zaporedje stekališče; podmnožica evklidskega prostora je kompaktna natanko tedaj, ko je omejena in zaprta  }
-\geslo{glide reflection}{zrcalni zdrs ali zrcalni pomik -- tip ravninske evklidske izometrije, ki je kompozitum zrcaljenja in translacije vzdolž iste premice}  
-\geslo{lattice}{mreža}  
-\geslo{link}{splet}
-\geslo{partition}{\textbf{$\sim$ of a set} razdelitev množice; \textbf{$\sim$ of a number} razčlenitev števila}
+\geslo{funkcijsko programiranje}{računalniški koncept, znotraj katerega programe pišemo s komponiranjem in apliciranjem matematičnih funkcij}
+\geslo{stranski učinki programov}{odklon med čistimi matematičnimi funkcijami ter našim programom.}
+% TODO: Je vztrajno dober prevod ``persistent''?
+\geslo{Vztrajna podatkovna struktura}{}
+% TODO: Je minljivo dober prevod ``ephemeral''?
+\geslo{Minljiva podatkovna struktura}{}
 }
 
 % - ime datoteke z viri (vključno s končnico .bib), če uporabljate BibTeX
-\literatura{literatura.bib}
+% \literatura{literatura.bib}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % DODATNE DEFINICIJE
@@ -69,25 +65,17 @@ vsebine.}
 % naložite dodatne pakete, ki jih potrebujete
 \usepackage{algpseudocode}  % za psevdokodo
 \usepackage{algorithm}      % za algoritme
+\usepackage{algorithmicx}
+
 \floatname{algorithm}{Algoritem}
 \renewcommand{\listalgorithmname}{Kazalo algoritmov}
 
-% deklarirajte vse matematične operatorje, da jih bo LaTeX pravilno stavil
-% \DeclareMathOperator{\conv}{conv}
-% na razpolago so naslednja matematična okolja, ki jih kličemo s parom
-% \begin{imeokolja}[morebitni komentar v oklepaju] ... \end{imeokolja}
-%
-% definicija, opomba, primer, zgled, lema, trditev, izrek, posledica, dokaz
-
-% za številske množice uporabite naslednje simbole
 \newcommand{\R}{\mathbb R}
 \newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
-% Lahko se zgodi, da je ukaz \C definiral že paket hyperref,
-% zato dobite napako: Command \C already defined.
-% V tem primeru namesto ukaza \newcommand uporabite \renewcommand
 \newcommand{\C}{\mathbb C}
 \newcommand{\Q}{\mathbb Q}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ZAČETEK VSEBINE
@@ -97,116 +85,74 @@ vsebine.}
 
 \section{Uvod}
 
-Na začetku prvega poglavja/razdelka (ali v samostojnem razdelku z naslovom
-Uvod) napišite kratek zgodovinski in matematični uvod. Pojasnite motivacijo za
-problem, kje nastopa, kje vse je bil obravnavan. Na koncu opišite tudi
-organizacijo dela -- kaj je v kakšnem razdelku.
+Grafovski algoritmi so dan danes ključni pri modeliranju širokega nabora vsakdanjih problemov: Družbena omrežja, računalniška omrežja in računalniške komunikacije ter podatkovna analitika. Splošno, z grafi lahko abstrahiramo kakršno koli množico odnosov med danimi entitetami, vse od računanja razdalj med mesti, pa do računanje vodnega pretoka od enega kraja do drugega.
 
-Če se uvod naravno nadaljuje v besedilo prvega poglavja, lahko nadaljujete z
-besedilom v istem razdelku, sicer začnete novega. Na začetku vsakega
-razdelka/podraz\-delka poveste, čemu se bomo posvetili v nadaljevanju. Pri
-pisanju uporabljajte ukaze za matematična okolja, med formalnimi enotami
-dodajte vezno razlagalno besedilo.
+Ker velikost grafov raste nelinearno z večanjem podatkov, z računanjem pogosto trčimo ob računsko prezahtevno oviro. Načinov za reševanje tega je več, pogosto pa je ena izmed najpogostejših ozkih grl to, da našega programa nismo napisali paralelno ter s tem izkoristili celotne kapacitete računalnika, temveč smo naš program poganjali zgolj na enem jedru. Posledično je paralelizacija tovrstnih algoritmov v zadnjih letih postala zanimiva in aplikativna raziskovalna tema. V moji diplomski nalogi se bom tako ukvarjal z paralelizacijo grafovksih algoritmov.
 
-\section{Zveznost}
+Funkcijski programski jeziki zagotavljajo matematične abstrakcije na višjem nivoju, kot so jih to sposobni navadni imperativni programski jeziki, kot so na primer Python, C++ in Java. Ena izmed prednosti funkcijskih programskih jezikov je, da omogočajo deklarativno programiranje, kar jih naredi bolj paralelizabilne (več o tem v nadaljevanju). Tako me je zanimanje za matematične grafe, algoritme in funkcijske jezike pripeljalo v združevanje vseh teh tem hkrati: V svoji diplomski nalogi se bom tako ukvarjal s \textit{paralelizacijo grafovskih algoritmov v funkcijskih programskih jezikih}.
 
-V tem poglavju bomo ponovili osnovne pojme, povezane z zveznostjo funkcij. Pri
-tem bomo sledili~\cite{glob}.
+Vzporednost na nivoju pomnilnika je moč doseči na dva načina: Tako, da je pomnilnik vsem računalniškim jedrom skupen, ali pa da je pomnilnik \textit{porazdeljen}. V tej diplomski nalogi se bom osredotočal na sisteme s skupnim pomnilnikom. V tej diplomski nalogi se bom osredotočal zgolj na sisteme s skupnim pomnilnikom.
 
-Viri se v seznamu literature prikažejo le, če jih uporabimo v besedilu,
-zato moramo citirati tudi~\cite{lang,zbornik,kalisnik,wiki,vec-avtorjev}.
+Vse več funkcijskih programskih jezikov, kot so Scala, F\# ter Haskell ima implementirane knjižnice in ogrodja za paralelizacijo grafovskih algoritmov:
+\begin{itemize}
+    \item knjižnica \textit{Graphalyze} v Haskellu zagotavlja vzporedne algoritme za najkrajšo pot ter iskanje krepko povezanih komponent.
+    \item \textit{GraphX} v Scali ponuja implementacijo paralelnega Googlovega PageRank algoritma.
+    \item \textit{Alea.cuBase} nam ponuja osnovne paralelne algoritme v jeziku F\#.
+\end{itemize}
+
+Od konca lanskega leta pa imamo nov funkcijski programski jezik, ki je postal ``multicore'' - to je OCaml, ki se med drugim poučuje na naši fakulteti v sklopu računalniško-orientiranih predmetov. Zato sem to priložnost izoristil, da svoje računalniške programe pišem v tem funkcijskem jeziku. V tej diplomski naloge se bom tako spustil v tovrstne knjižnice v funkcijskih jezikih, ki že obstajajo, pregledal novejše raziskave kar se tiče grafovskih algoritmov v imperativnih jezikih, to prevedel v deklarativni jezik ter vse to skupaj povezav v zaključeno celovito knjižnico v OCamlu.
+
+
+\section{Kratek uvod v funkcijsko programiranje}
+
+\subsection{Zakaj funkcijski programski jeziki}
 
 \begin{definicija}
-Funkcija $f\colon [a,b]\to\R$ je \emph{zvezna}, če \ldots
+Stranski učinki so v programiranju kakršen koli odklon med čistimi matematičnimi funkcijami ter našim programom.
 \end{definicija}
 
-Podrobneje si poglejmo naslednji rezultat. Ker se bomo kasneje nanj sklicevali,
-si pripravimo oznako z ukazom \verb|\label{oznaka}|. Seveda morajo biti oznake
-različnih trditev različne. Enako označujemo tudi druga okolja oziroma enote
-besedila.
+Funkcijsko programiranje je računalniški koncept, znotraj katerega programe pišemo komponiranjem in apliciranjem matematičnih funkcij. Programiranje take vrste uporabnika preko zasnove samega jezika spodbudi, da piše t.i. programe brez stranskih učinkov oz. jih omeji kakor se le da. Primer stranskega učinka bi bilo spreminjanje uporabniškega pomnilnika, ali pa branje tekstovnih datotek.
 
-\begin{izrek}\label{izr:enakomerno}
-Zvezna funkcija na zaprtem intervalu je enakomerno zvezna.
-\end{izrek}
+Kot rečeno, v splošnem se stranskim učinkom želimo kakor se le da izogniti, saj zmanjšajo preglednost naše kode, prav tako pa lahko uporabnika zmede, če večkrat požene isto. 
 
-\begin{dokaz}
-Na začetku dokaza, če je to le mogoče in smiselno, razložite idejo dokaza.
+Kot rečeno, v splošnem se stranskim učinkov želimo izogniti, saj pogosto zbegajo tako razvijalca kot tudi uporabnika: Sorazvijalcu zmanjšajo preglednost naše kode ter privedejo do bolj pogostih napak, iz uporabniškega stališča pa se kakšen podatek v ozadju nehote spremeni, kar uporabnika pogosto zbega. Tiste dele kode, ki pa stranske učinke imajo, pa izoliramo v smislu da dodatno ne počnejo še drugih čistih matematičnih operacij.
 
-Dokazovali bomo s protislovjem. Pomagali si bomo z definicijo zveznosti in s
-kompaktnostjo intervala.  Izberimo $\varepsilon>0$. Če $f$ ni enakomerno
-zvezna, potem za vsak $\delta>0$ obstajata $x, y$, ki zadoščata
-\begin{equation}\label{eq:razlika}
-  |x-y|<\delta\quad \text{in}\quad |f(x)-f(y)| \ge \varepsilon. \qedhere
-\end{equation}
-\end{dokaz}
+% TODO: Dodaj code snippet, kjer pokažeš, zakaj stranski učinki niso zaželjeni.
 
-V zgornjem primeru smo kvadratek za konec dokaza postavili v zadnjo vrstico
-besedila, ki je vrstična formula, s pomočjo ukaza \verb|\qedhere|.  Ta ukaz
-ustrezno deluje znotraj okolij \emph{equation, align*} in podobnih, ne pa
-znotraj \verb|$$ ... $$|.
+Zadnjih par let funkcijski programski jeziki zaradi svojih lastnosti pridobivajo na popularnosti. Zaradi zasnove funkcijskih programskih jezikov so tovrstni programi tipično lepše razdeljeni v manjše kose kode, znotraj katerih vsak kos počne natanko eno vlogo, kar omogoči lažjo uporabo iste programske kode na več različnih problemih. Zaradi takih učinkov ter drugih razlik, ki ločijo funkcijske ter imperativne jezike (npr. preverjanje tipov pred izvajanjem programa) pa je naš program prav tako precej lažje testirati, razhroščevati in vzdrževati. Funkcijski programer se pogosto pošali, da mu program njegovo napako sporoči že preden je program sploh zagnal. Tako je uporabnik ``prisiljen'' pisati bolj robustne ter zanesljive programe, manj izpostavljene potencialnim napakam ter sesutjem.
 
-Oglejmo si še enkrat neenačbi~\eqref{eq:razlika}. Na formule se sklicujemo z
-ukazom \verb|\eqref{oznaka}|, ki postavi zaporedno številko enačbe
-v oklepaje, na trditve in ostale enote pa z ukazom \verb|\ref{oznaka}|. Črni
-pravokotnik ob robu strani označuje predolgo vrstico, kjer \LaTeX ni uspel
-pravilno postaviti besedila, zato mu morate pomagati, npr.\ tako, da stavek
-nekoliko preoblikujete, sami razdelite nedeljivo enoto (npr. razdelite
-matematično formulo na dva dela) ali pa ponudite možnosti za deljenje težavne
-besede s pomočjo znakov\verb|\-|, ki jih postavite na mesto, kjer se besedo sme
-deliti, npr.\  \verb|te\-žav\-nost\-ni\-ca|. Zgoraj bi tako lahko zapisali:
+Zadnja prednost, ki bi jo izpostavil, je razlika v hitrosti visokonivojskih imperativnih (Python, Ruby, Java) ter funkcijskih programskih jezikov. 
 
-Oglejmo si še enkrat neenačbi~\eqref{eq:razlika}. Za sklicevanje na označene
-enote besedila imamo na razpolago dva ukaza; na formule se sklicujemo z ukazom
-\verb|\eqref{oznaka}|, \dots
+Zadnja prednost, ki bi jo izpostavil, je razlika v hitrosti funkcijskih jezikov - le-ti so po eni strani precej bolj ekpresivni od nižjenivojskih imperativnih jezikov (C++, C) ter le malo počasnejši kar se tiče izvajanja, po drugi strani pa precej  hitrejši od visokonivojskih programskih jezikov (Python, Ruby, Java), s čimer imajo dobro uporabno nišo v industriji, kjer sta važna tako hitrost kot ekspresivnost jezika (npr. uporaba takih jezikov za visoko-frekvenčno trgovanje s finančnimi instrumenti).
 
-V predzadnjem odstavku je v oklepaju za okrajšavo npr.\ nastal predolg
-presledek sredi stavka, saj je \LaTeX zaradi pike sklepal, da je na tem mestu
-stavka konec. Tak predolg presledek preprečimo tako, da za piko sredi stavka
-postavimo poševnico in za njo presledek, torej \verb|\ |.\\
+Kot že omenjeno v poglavju 
+\\ref uvod-poglavje, 
+pa funkcijski jeziki prav tako omogočajo lažjo sočasnost ter paralelizabilnost programa. Vse to funkcijske jezike naredi primerne za t.i. \textit{visoko performančne sisteme z večnitinimi programi}.
 
-Če dokaz trditve ne sledi neposredno formulaciji trditve, moramo povedati, kaj
-bomo dokazovali. To naredimo tako, da ob ukazu za okolje dokaz dodamo neobvezni
-parameter,  v katerem napišemo besedilo, ki se bo izpisalo namesto besede
-\emph{Dokaz}, npr.\ \verb|\begin{Dokaz}[Dokaz izreka \ref{izr:enakomerno}]|.
+% TODO: Dodaj še kaj o paralelizabilnosti tukajle.
 
-\begin{dokaz}[Dokaz izreka \ref{izr:enakomerno}]
-  Dokazovanja te trditve se lahko lotimo tudi takole \ldots
-\end{dokaz}
+\subsection{Funkcijske podatkovne strukture}
 
-\subsection{Naslov morebitnega (pod)razdelka} Besedilo naj se nadaljuje v vrstici naslova, torej za ukazom \verb|\subsection{}| ne smete izpustiti prazne vrstice.
+Ko potrebujem npr. implementacijo vrste s prednostjo v Pythonu, je pogosto dovolj, da v splošnem učbeniku najdem njeno implementacijo ter to prepišem. Razvijalci, ki pa svojo kodo pišejo v funkcijskih programskih jezikih, pa pogosto te sreče nimajo. Razloga sta dva: Prvi bi bil, da funkcijski jeziki niso tako razširjeni kot imperativni, drugi pa je, da se funkcijski jeziki med sabo bolj razlikujejo kot se med sabo razlikujejo imperativni. Poljubno psevdokodo, napisano v imperativnem smislu, je lažje prirediti v Python, kot pa je npr. poljubno psevdokodo, napisano v funkcijskem smislu prirediti v na primer OCaml.
 
-Podobno kot lahko spremenimo ime dokaza, lahko dodamo komentar v ime trditve,
-torej s pomočjo neobveznega parametra; prvega od spodnjih izpisov dosežemo z
-ukazom \verb|\begin{posledica}[izrek o vmesni vrednosti]|. Če želimo v
-parametru navesti vir, pri katerem bomo navedli podatek o tem, kje v viru to
-trditev najdemo, pa uporabimo ukaz
-\verb|\begin{posledica}[\protect{\cite[izrek 3.14]{glob}}]|. Seveda lahko obe
-možnosti kombiniramo.
+\begin{definicija}
+Podatkovna struktura je \textbf{vztrajna}, če lahko vidimo njeno zgodovino spreminjanja. Taka podatkovna struktura hrani svoje prejšne verzije.
+Podatkovna struktura je \textbf{minljiva}, je podatkovna struktura, ki ne pomni svojih prejšnih verzij.
+\end{definicija}
 
+Funkcijski programski jeziki imajo zanimivo lastnost, da so vse podatkovne strukture avtomatsko \textit{vztrajne}, medtem ko je v imperativnih programskih jezikih vztrajne podatkovne strukture tipično težje implementirati, prav tako pa so asimptotsko počasnejše kot ``minljive'' podatkovne strukture. Prednost vztrajnih podatkovnih struktur očitno ta, da lahko dostopamo do svojih prejšnjih različic, prednost minljivih struktur pa je, da da so hitrejše na pram vztrajnih. Posledično so v splošnem podatkovne strukture v funkcijskih jezikih asimptotsko počasnejše kot pri imperativnih jezikih.
 
-\begin{posledica}[izrek o vmesni vrednosti]
-  Naj bo $f$ zvezna in \ldots
-\end{posledica}
+% TODO (kasneje): Podaj primer podatkovne strukture, ki se je na funkcijski način ne da učinkovito implementirati.
+Še ena slabost podatkovnih struktur v funkcijskih jezikih je, da se nekaterih podatkovnih struktur preprosto ne da učinkovito implementirati na funkcijski način.
 
-Ali pa
-
-\begin{posledica}[izrek o vmesni vrednosti \protect{\cite[izrek 3.14]{glob}}]
-  Naj bo $f$ zvezna in \ldots
-\end{posledica}
-
-Podobno lahko napovemo tudi vsebino primera.
-
-\begin{primer}[nezvezna funkcija nima nujno lastnosti povprečne vrednosti]
-  Naj bo $f \colon \R \to \R$ dana s predpisom \dots
-\end{primer}
 
 \subsection{Pisanje algoritmov}
 Za pisanje algoritmov sta na voljo okolji \texttt{algorithm} in
 \texttt{algorithmic} iz paketov \texttt{algorithm} in \texttt{algorithmix}, ki
 sodelujeta podobno kot \texttt{table} in \texttt{tabular}. Algoritmi plavajo
 med tekstom, enako kot slike in tabele, nanje se lahko tudi sklicujemo, kot
-prikazano v izvorni kodi in v algoritmu~\ref{alg:metoda}. Sklicujemo se lahko
-tudi na pomembne vrstice, npr.\ na vrstico~\ref{alg:pomembna-vrstica}, ki
+prikazano v izvorni kodi in v algoritmu~\\ref alg:metoda. Sklicujemo se lahko
+tudi na pomembne vrstice, npr.\ na vrstico \\ref alg:pomembna-vrstica, ki
 predstavlja glavni del algoritma. Za primer pisanja algoritma se posvetujte s
 primerom v tem dokumentu, za bolj napredne primere uporabe, kot na primer
 razbijanje algoritma na več kosov, pa z (precej razumljivo) uradno
@@ -254,26 +200,6 @@ dokumentacijo\footnote{\url{http://tug.ctan.org/macros/latex/contrib/algorithmic
 
 \section{Konec dela}
 
-Na konec dela sodita angleško-slovenski slovarček strokovnih izrazov in seznam
-uporabljene literature, morebitne priloge (programska koda, daljša ponovitev
-dela snovi, ki je bil obravnavan med študijem \dots) pa neposredno pred ti
-enoti. Slovar naj vsebuje vse pojme, ki ste jih spoznali ob pripravi dela, pa
-tudi že znane pojme, ki ste jih spoznali pri izbirnih predmetih. Najprej
-navedite angleški pojem (ti naj bodo urejeni po abecedi) in potem ustrezni
-slovenski prevod; zaželeno je, da temu sledi tudi opis pojma, lahko komentar
-ali pojasnilo. Slovarska gesla navajajte z ukazom \verb|\geslo{}{}|, npr.\
-\verb|\geslo{continuous}{zvezen}|.
 
-Pri navajanju literature si pomagajte s spodnjimi primeri; najprej je opisano
-pravilo za vsak tip vira, nato so podani primeri. Člen literature napišete z
-ukazom \verb|\bibitem{oznaka} podatki o viru|, kjer mora \emph{ozmaka} enolično
-določati vir.  Posebej opozarjam, da spletni viri uporabljajo paket url, ki je
-vključen v~.cls datoteki. Polje ``ogled'' pri spletnih virih je obvezno; če je
-kak podatek neznan, ustrezno ``polje'' seveda izpustimo. Literaturo je potrebno
-urediti po abecednem vrstnem redu; najprej navedemo vse vire z znanimi avtorji
-(tiskane in spletne) po abecednem redu avtorjev (po priimkih, nato imenih),
-nato pa spletne vire brez avtorjev, urejene po naslovih strani. Če isti vir
-navajamo v dveh oblikah, kot tiskani in spletni vir, najprej navedemo tiskani
-vir, nato pa še podatek o tem, kje je dostopen v elektronski obliki.
 
 \end{document}
